# focus-detect

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TODOS.md  components.json  design-preview.html  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/plans/: 2026-03-16-focus-detector-design.md  2026-03-16-focus-detector-implementation.md
public/memes/defaults/: README.md
public/sounds/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: alarm_overlay.rs  detection.rs  lib.rs  main.rs  memes.rs  monitors.rs  tray.rs
src/__tests__/: detectionPipeline.test.ts  matchingEngine.test.ts  setup.ts  usePomodoro.test.ts  visionService.test.ts
src/components/alarm/: AlarmController.tsx  AlarmLevel1.tsx  AlarmLevel2.tsx  AlarmLevel3.tsx  GlitchEffect.tsx  ParticleBurst.tsx  ScreenShake.tsx  glitch.css
src/components/detection/: DetectionStatus.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Titlebar.tsx
src/context/: AppContext.tsx
src/hooks/: useDetection.ts  usePomodoro.ts  useProfiles.ts  useStats.ts
src/lib/: pomodoro.ts
src/pages/: AlarmPage.tsx  Dashboard.tsx  Profiles.tsx  Settings.tsx  Stats.tsx  Widget.tsx
src/services/: alarmSound.ts  detectionPipeline.ts  detectionService.ts  matchingEngine.ts  memeService.ts  profileService.ts  screenshotService.ts  sessionService.ts  settingsService.ts  visionService.ts
src/types/: ai.ts  pomodoro.ts  profile.ts
(+32 files in other folders)
