[package]
name = "focus-detector"
version = "0.1.0"
description = "A desktop productivity enforcement app"
authors = ["you"]
edition = "2021"

[lib]
name = "focus_detector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
active-win-pos-rs = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
xcap = "0.3"
image = "0.25"
window-vibrancy = "0.7"
